solve N+1 query problem
