# demoOpenAPI/openapi.yaml
@@ -202,6 +202,19 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/BookWithAuthor'
+  /books-with-authors-optimzed:
+    get:
+      summary: Lấy danh sách với truy vấn tối ưu
+      operationId: app.get_books_with_authors_optimized
+      responses:
+        '200':
+          description: Lấy danh sách thành công
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/BookWithAuthor'
 
   # tái sử dụng parameters:
   # /books/{bookID}:
